ui/client-react/src/components/fields/phoneField.scss
@import '../../../src/assets/css/qbVariables';

.phoneWrapper {
    display: flex;
    width: 100%;
    .ext {
        width: 4%;
        text-align: center;
        align-self: center;
    }

    .input.phoneNumber {
        width: 66%;
    }
    .input.extension {
        width: 28%;
    }

    .extraDigits, .extension {
        color: $text-color;
    }

    .extraDigits::before, .extension::before {
        content: "\00a0";
    }
}

